<resources>
    <string name="app_name">Price Tracker</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_welcome">Witamy ponownie</string>
    <string name="title_registration">Registration</string>
    <string name="title_reset_password">Resetuj hasło</string>

    <string name="login_fragment">LoginFragment</string>
    <string name="registration_fragment">Registration Fragment</string>
    <string name="login">Login</string>
    <string name="log_in">Zaloguj się</string>
    <string name="registration">Załóż konto</string>
    <string name="login_or_email">Wprowadź login lub adres E-mail</string>
    <string name="email_hint">Podaj adres E-mail</string>
    <string name="user_name">Podaj nazwe użytkownika</string>
    <string name="password">Type password</string>
    <string name="title_login">Zaloguj się</string>
    <!--    <string name="title_registration">Załóż konto</string>-->
    <string name="password_repeat">Powtórz hasło</string>
    <string name="sign_up_title">Zarejestruj się</string>
    <string name="forgot_password">Zapomniałeś hasła?</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <!--    FRAGMENTS   -->
    <string name="fragment_bestsellers">Bestsellers</string>
    <string name="fragment_dashboard">Search Game</string>
    <string name="fragment_notification">Notification</string>
    <string name="fragment_profile">Profile</string>

    <!--    CREDENTIALS    -->
    <string name="test_user_email_address">test@email.com</string>
    <string name="test_user_name">Test User</string>
    <string name="test_user_password">password123</string>

    <!--    Profile    -->
    <string name="edit_button_text">Edit</string>
    <string name="save_button_text">Save</string>
    <string name="name_text">Imię</string>
    <string name="second_name_text">Nazwisko</string>
    <string name="email_text">Email</string>
    <string name="logout_button">Wyloguj</string>
    <string name="create_new_password">Create new password</string>
    <string name="edit_email">Edit Email</string>
    <string name="cancel">Cancel</string>

    <!--    DIALOGS     -->
    <string name="edit_email_address_title">Edit Email Address</string>
    <string name="edit_email_hint_old">Your Email address</string>
    <string name="edit_email_hint_new">Your new Email address</string>
    <string name="edit_email_hint_new_repeat">Repeat new Email address</string>
    <string name="edit_email_save">Save New Email</string>

    <string name="edit_new_password_title">Create new password</string>
    <string name="type_old_password">Type old password</string>
    <string name="type_new_password">Type new password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="new_password_save">Save New Password</string>


</resources>