<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/login_fragment">

    <fragment
        android:id="@+id/login_fragment"
        android:name="com.example.pricetracker.authentication.fragments.LoginFragment"
        android:label="@string/title_welcome"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_login_fragment_to_registration_fragment"
            app:destination="@id/registration_fragment" />
        <action
            android:id="@+id/action_login_fragment_to_reset_password_fragment"
            app:destination="@id/reset_password_fragment" />
    </fragment>

    <fragment
        android:id="@+id/registration_fragment"
        android:name="com.example.pricetracker.authentication.fragments.RegistrationFragment"
        android:label="@string/title_registration"
        tools:layout="@layout/fragment_registration" />

    <fragment
        android:id="@+id/reset_password_fragment"
        android:name="com.example.pricetracker.authentication.fragments.ResetPasswordFragment"
        android:label="@string/title_reset_password"
        tools:layout="@layout/fragment_reset_password" />
</navigation>