<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.pricetracker.dashboard.DashboardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_normal_big_24dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="@dimen/margin_normal_16dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/tv_name_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name_text"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/btn_edit_or_save_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="@{viewModel.profileEditable}"
                android:text="@{viewModel.user.name}"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_title"
                tools:text="@string/test_user_name" />

            <Button
                android:id="@+id/btn_edit_or_save_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@{viewModel.editOrSaveProfile}"
                app:layout_constraintBottom_toBottomOf="@+id/tv_name_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/btn_edit_email"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/edit_button_text" />

            <TextView
                android:id="@+id/tv_email_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_big_32dp"
                android:text="@string/email_text"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/btn_edit_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_user_name" />

            <TextView
                android:id="@+id/tv_user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal_16dp"
                android:text="@{viewModel.user.email}"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_email_title"
                tools:ignore="TextFields"
                tools:text="@string/test_user_email_address" />

            <Button
                android:id="@+id/btn_edit_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/edit_email"
                app:layout_constraintBottom_toBottomOf="@+id/tv_email_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_email_title"/>

            <Button
                android:id="@+id/btn_edit_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/margin_big_horizontal_64dp"
                android:text="@string/create_new_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_email" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginHorizontal="@dimen/margin_big_horizontal_64dp"
            android:layout_marginBottom="@dimen/margin_normal_big_24dp"
            android:text="@string/logout_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/logout_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>