<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pricetracker.dashboard.fragments.HomeFragment"
        android:label="@string/fragment_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.pricetracker.dashboard.fragments.DashboardFragment"
        android:label="@string/fragment_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.pricetracker.dashboard.fragments.NotificationsFragment"
        android:label="@string/fragment_notification"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.pricetracker.dashboard.fragments.ProfileFragment"
        android:label="@string/fragment_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_editEmailAddressDialog"
            app:destination="@id/editEmailAddressDialog" />
        <action
            android:id="@+id/action_navigation_profile_to_dialogNewPassword"
            app:destination="@id/dialogNewPassword" />
    </fragment>
    <dialog
        android:id="@+id/editEmailAddressDialog"
        android:name="com.example.pricetracker.dashboard.dialogs.EditEmailAddressDialog"
        android:label="EditEmailAddressDialog"
        tools:layout="@layout/dialog_edit_email_address"  />
    <dialog
        android:id="@+id/dialogNewPassword"
        android:name="com.example.pricetracker.dashboard.dialogs.DialogNewPassword"
        android:label="DialogNewPassword"
        tools:layout="@layout/dialog_new_password"  />
</navigation>